[package]
name = "pwalarmd"
version = "0.1.0"
edition = "2021"
authors = ["Amy Parker <amy@amyip.net>"]
description = "Daemon-based configurable CLI alarm clock"
readme = "README.md"
rust-version = "1.71"
homepage = "https://amyip.net"
repository = "https://github.com/amyipdev/pwalarmctl"
license = "GPL-2.0-or-later"
categories = ["command-line-utilities"]
keywords = ["alarm", "alarms", "pwalarmctl", "notify", "notifications"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: cut out unnecessary (windows) features
[dependencies]
chrono = "0.4.34"
colored = "2.1.0"
daemonize = "0.5.0"
libc = "0.2.153"
notify-rust = "4.10.0"
protobuf = "3.4.0"
rodio = "0.17.3"
serde = "1.0.197"
serde_derive = "1.0.197"
shellexpand = "3.1.0"
toml = "0.8.10"

[build-dependencies]
protobuf-codegen = "3.4.0"

[workspace]
members = ["pwalarmctl"]
